# ai-influencer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  Spec.md  pyproject.toml
.claude/rules/: compliance.md  face-qc.md  pipeline.md  testing.md  workflow.md
docs/: roadmap.md  state-of-the-art-audit.md
docs/implementation/: compliance.md  eval.md  face-qc.md  pipeline.md  pod-known-issues.md  pod-lifecycle.md  post-process.md
docs/operations/: dataset-v2-runbook.md
docs/research/: face-consistency-stack.md  infra-pipeline-negocio.md  modelos-nsfw.md  modelos-sfw-video-voz.md  orchestration-compliance-2026.md  plataformas-monetizacion.md  top-influencers-forensic.md  video-pipeline-2026.md
docs/specs/: face-consistency.md  pipeline-orchestration.md  quality-eval.md
prompts/: eval_v2_prompts.txt  eval_v2_prompts_pro.txt  identity_canon.txt  safety_negative.txt
prompts/avatars/: A_morocha_italiana_v2.txt  A_morocha_italiana_v3.txt  (+4 more)
scripts/: caption_dataset.py  compute_canon_embedding.py  curate.py  eval_checkpoints.py  face_qc_batch.py  filter_canon_v2.py  generate_batch.py  generate_batch_v2.py  humanize_batch.py  pipeline.py  pod.py  runpod_setup.sh  test_chroma_nsfw.py  test_chroma_nsfw_v2.py  test_chroma_nsfw_v3.py  test_chroma_sfw.py  test_lora.py  test_lora_final.py  test_sdxl_bigasp_nsfw.py  train_lora_flux.sh  train_lora_sdxl.sh
workflows/: bootstrap_candidates.json  chroma_with_lora.json  flux_lora_lingerie.json  flux_lora_v2_pro.json  flux_lora_v2_quality.json  flux_with_lora.json  flux_with_lora_simple_v2.json  flux_with_lora_v2.json  sdxl_bigasp_nsfw.json  sdxl_bigasp_nsfw_v2.json  wan22_14b_i2v.json  wan22_i2v_reels.json
(+47 files in other folders)
