[project]
name = "ai-influencer"
version = "0.1.0"
description = "AI influencer content generation pipeline (MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.8",
    "pillow>=10.4",
    "tqdm>=4.66",
    "websocket-client>=1.8",
    "logfire>=2.0",
    "runpod>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 110
target-version = "py311"
