[project]
name = "ai-influencer"
version = "0.1.0"
description = "AI influencer content generation pipeline (MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-graph>=0.0.30",
    "pillow>=10.4",
    "tqdm>=4.66",
    "websocket-client>=1.8",
    "logfire>=2.0",
    "runpod>=1.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
# Face QC con InsightFace. Requires Linux/macOS o MSVC en Windows.
# En el pod (Linux): `uv sync --extra face-qc`. En Windows dev: skip.
face-qc = [
    "insightface>=0.7.3",
    "onnxruntime>=1.20",
    "opencv-python-headless>=4.10",
    "numpy<2",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/aiinfluencer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.logfire]
ignore_no_config = true

[tool.ruff]
line-length = 110
target-version = "py311"
